fix scrollbar errors on windows

--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -107,7 +107,7 @@ body{
 	min-width: 40%;
 	padding-right:10%;
 	padding-left:5%;
-	overflow: scroll;
+	overflow: auto;
 }
 
 .people {
@@ -119,7 +119,7 @@ body{
   	border-left: 1px solid #666;
   	border-color: #e5e5e5;
   	height: auto;
-  	overflow: scroll;
+  	overflow: auto;
   	padding-left: 0%;
   	padding-right: 0%;
 }
@@ -143,7 +143,7 @@ body{
 	background-color: white;
 	min-height: 80vh;
 	max-height: 80vh;
-	overflow: scroll;
+	overflow: auto;
 }
 .submitArea {
   bottom: 0;
